# mini

./: CMakeLists.txt  mini.xml  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mini.ros2_control.xacro  mini.srdf  mini.urdf  mini.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
hardware/: mini_hardware.cpp
hardware/include/: mini_hardware.hpp
launch/: try.launch.py  with_cont.launch.py  without_cont.launch.py
